<resources>
    <string name="app_name">TestLich</string>
    <string name="regulations">Правила проведения теста</string>
    <string name="Pravila">1. Представьте себя в ситуациях, которые будут вам предложены \n\n2. Опишите «увиденное», отвечая на вопросы тестов \n\n3. Чтобы было удобнее расшифровывать результаты, записывайте свои ответы на листе бумаги</string>
    <string name="PraviloOne">Самое главное правило - это полностью углубится в свою фантазию и воссоздать все в мельчайших деталях</string>
    <string name="title_activity_main3">MainActivity3</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="stroll">Там солнечно или пасмурно?\nКакие деревья там растут, много ли их, как далеко друг от друга они растут?\nХорошо ли вам в этом лесу?\nКакое время года и какое время суток?\nВы один (одна)?\nЧто вы делаете в лесу?\nС какой целью вы сюда отправились?</string>
    <string name="forest">Представьте, что вы идете по лесу.\nОпишите, какой это лес</string>
    <string name="key">Вдруг вы видите, что в траве что-то блестит.\nНаклоняетесь и видете ключ</string>
    <string name="keyWhat">Какой он?\nЧто вы будет с ним делать — поднимите или пойдете мимо?\nОбрадовала ли вас находка?</string>
    <string name="bear">Вдруг вы замечаете медведя</string>
    <string name="bearWhat">Какой медведь, что он делает?\nКак он к вам отнесся?\nКак реагируете на него вы?</string>
    <string name="spring">Впереди родник</string>
    <string name="springWhat">Вы станете из него пить, умываться?</string>
    <string name="dwarf">Неожиданно к вам подходит карлик</string>
    <string name="dwarfWhat">Он пытается обратить на себя ваше внимание, крутится под ногами. Ваша реакция?\nВы сердитесь?\nВы жалеете его?\nОн продолжает к вам приставать – что вы делаете?</string>
    <string name="river">Вы выходите на берег реки\nПредставьте себе реку очень отчетливо</string>
    <string name="riverWhat">Какая там вода?\nКакая скорость течения?\nКакое дно?\nЕсть ли камни на дне?\nНравится ли вам на берегу?</string>
    <string name="plate">Хочу вас обрадовать: это ваш дом, на дверях — табличка, которая об этом и сообщает</string>
    <string name="plateWhat">Как выглядит табличка и что конкретно на ней написано?</string>
    <string name="home">Вы открыли дверь и вошли в дом.\nОсмотритесь</string>
    <string name="homeWhat">Уютно ли вам тут?\nКругом чистота или беспорядок?\nСколько комнат в этом доме?\nКакие?\nНазовите и опишите их</string>
    <string name="basement">Вы поднимаетесь на чердак</string>
    <string name="basementWhat">Как он выглядит?\nЧто там хранится?\nНа чердаке порядок или всюду хлам?\nСколько времени вы проведете там?</string>
    <string name="leave">Вы покидаете дом</string>
    <string name="leaveWhat">С сожалением или с радостью?\nХотите ли вы поскорее туда вернуться?</string>
    <string name="seagulls">Над морем летают чайки</string>
    <string name="seagullsWhat">Летают высоко, низко, рядом с вами или далеко?\nВы их слышите?\nКакие чувства вызывают они?</string>
    <string name="ship">Вы видите корабль</string>
    <string name="shipWhat">Какой корабль, насколько он далеко от берега?\nМожете ли вы до него добраться?\nСтанете ли вы это делать?</string>
    <string name="List">Ключи к вашим ответам</string>
    <string name="answerForest">Лес символически отражает общество, которое вас окружает и ваше отношение к людям. Чем радостнее вам в лесу, тем более позитивно ваше отношение к людям; чем более пугающую картину нарисовало ваше воображение (мрачные деревья, непроходимая чаща), тем труднее вам проявить себя; вы не очень довольны окружающими и считаете, что они не понимают или недооценивают вас. Если вам кажется, что в лесу слишком тесно, то, скорее всего, вы устали от близкого окружения, скопления народа в метро, офисе или квартире.</string>
    <string name="answerKey">Ключ — это ваше отношение ко всему новому, что приносит жизнь. Вашу готовность принимать перемены показывает то, подняли вы ключ или выбросили, обрадовались ему или нет.</string>
    <string name="answerBear">Медведь символизирует вашу реакцию на потенциальную опасность. Если вы прячетесь или замираете от страха — скорее всего вы и жизни слишком пассивны, если кидаетесь на медведя — слишком активны.</string>
    <string name="answerSpring">Ваша готовность напиться из родника показывает вашу готовность идти навстречу любви. Готовы ли вы к тому, чтобы в вашей жизни появилась подлинная, истинная и чистая любовь? Или вы попали к замусоренному канализационному люку?</string>
    <string name="answerDwarf">Ваше отношение к карлику покажет, насколько вы милосердны. Есть люди, которые бьют его ногами, а есть те, кто несет его на плечах.</string>
    <string name="answerRiver">Река — символ течения вашей жизни. Вспомните, насколько стремительным вам представлялся поток, насколько чистая вода. Дно и камни на нем тоже показывают жизненные трудности.</string>

    <string name="answerPlate">Табличка на двери говорит о том, кем вы сами себя считаете (у некоторых написано фамилия-имя-отчество, у некоторых – все регалии и заслуги, а у некоторых фамилия нацарапана сбоку мелом)</string>
    <string name="answerHouse">Те комнаты, которые вы увидели во время теста – это те аспекты вашей жизни, которые для вас наиболее важны. Там, где вам все нравится – все хорошо, если в какой-то из комнаты непорядок, возможно, есть проблемы в этой сфере жизни.</string>
    <string name="answerBasement">Подвал – ваше восприятие собственного бессознательного. Если вам плохо в подвале, то возможно, вы не в ладах с ним. Боитесь своих снов, не желаете вспоминать многие моменты прошлого, опасаетесь заглядывать в будущее. И это не очень хорошо, поскольку бессознательные страхи создают тревожность и перенапряжение.</string>
    <string name="answerAttic">Чердак — метафора всего образования, культуры, интеллекта, всех социальных навыков, привитых вам. Если там бардак, то, возможно, вы и не знаете, зачем столько сил прикладывали когда-то к получению диплома.</string>
    <string name="answerLeavingTheHouse">Дом — это вы сами. Насколько вам там нравится, настолько же хорошо вам с самой собой.</string>
    <string name="answerSeagulls">Чайки — это ваши родственники. Комментарии по громкости, навязчивости и приближенности подставьте сами.</string>
    <string name="answerShip">Корабль — это ваша мечта. Насколько она красива и насколько достижима, легко судить по тому, какой корабль и на каком расстоянии от берега вы его видите. Можно ли вообще до него добраться?</string>


    <string name="back">Назад</string>
    <string name="Go">Поехали</string>
    <string name="further">Далее</string>


</resources>